# gemma-aml-assistant

./: .gitignore  Dockerfile.streamlit  LICENSE  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  test_basic.py  test_quick.py
.github/workflows/: ci.yml
app/: __init__.py  streamlit_app.py
data/eval/: aml_eval.jsonl  due_diligence_eval.jsonl
docs/: DEMO_REPORT.md  EVALUATION.md  PROJECT_ROADMAP.md
scripts/: evaluate_due_diligence.py
src/: __init__.py
src/core/: __init__.py  gemma_client.py
src/data/: __init__.py  config.py  models.py  vector_store.py
src/logic/: __init__.py  explainability.py  gemma_client.py  qa_service.py  rag_pipeline.py
src/rag/: __init__.py  retriever.py
src/safety/: __init__.py  explainability.py
src/ui/: __init__.py  response_formatter.py
tests/: test_basic.py  test_gemma.py  test_quick.py
